Tiny updates (#1102)